2006-09-21  Thomas Moschny  <thomas.moschny@gmx.de>

	* revision.cc, revision.hh (regenerate_heights): New function,
	uses toposort code from mainline to traverse the graph and assign
	heights to all revisions.
	(regenerate_rosters): Removed call to
	app.db.ensure_open_for_format_changes, now done by
	regenerate_caches.
	* cmd_db.cc (CMD(db)): New command `regenerate_caches', calls
	`regenerate_rosters' and `regenerate_heights'.
	* schema_migration.cc: Replace occurrences of `regenerate_rosters'
	with `regenerate_caches'.
	(migrate_add_heights): set upgrade_regen_caches regime.
	* database.cc, database.hh (check_format): Check whether the
	database has heights.
	(delete_existing_heights): New function.
	(has_rev_height): Make parameter const.
	* tests/*/__driver__.lua: Adjust some tests to account for the
	renaming of regenerate_rosters.

2006-09-14  Nathaniel Smith  <njs@pobox.com>

	* cmd.hh: Make hidden_group a proper singleton, so it is safe to
	use in other files.
	* platform.hh, {unix,win32}/cputime.cc (cpu_now): New function for
	measuring cpu time, for benchmarking.
	* sha1.{hh,cc}, sha1_engine.hh: Framework for adding new SHA-1
	cores.  New hidden command benchmark_sha1 to benchmark them.
	* monotone.cc (botan_library): Call hook_botan_sha1().
	* Makefile.am: Add new files.

2006-09-14  Zack Weinberg  <zackw@panix.com>

	Use the roster cache in content_merge_adaptors.
	* diff_patch.hh: Constify all shared_ptr<roster_t>s.
	* diff_patch.cc: Similarly.
	(load_and_cache_roster): Use the db.get_roster overload
	that returns a cached_roster.
	* merge.cc (resolve_merge_conflicts): Constify a shared_ptr<roster_t>.
	* work.cc (content_merge_empty_adaptor): Similarly.

2006-09-13  Thomas Moschny  <thomas.moschny@gmx.de>

	* schema.sql: New table for the revision heights.
	* schema_migration.cc (migrate_monotone_schema): Add code for the
	  schema migration.
	* tests/schema_migration/__driver__.lua: Add migration test.