@@ -1617,24 +1617,19 @@ build_changesets_from_manifest_ancestry(app_state & app)
 }
 
 
-// Warning: may contain traces of the old toposort method :-)
-void
-regenerate_heights(app_state & app)
+static void
+allrevs_toposorted(vector<revision_id> & revisions,
+                   app_state & app)
 {
+
   typedef multimap<revision_id, revision_id>::const_iterator gi;
   typedef map<revision_id, int>::iterator pi;
 
-  P(F("determining revision heights"));
-
-  transaction_guard guard(app.db);
-
-  app.db.delete_existing_heights();
+  revisions.clear();
 
   // get the complete ancestry
-  multimap<revision_id, revision_id> graph, inverse_graph;
+  multimap<revision_id, revision_id> graph;
   app.db.get_revision_ancestry(graph);
-  for (gi i = graph.begin(); i != graph.end(); ++i)
-    inverse_graph.insert(make_pair(i->second, i->first));
 
   // determine the number of parents for each rev
   map<revision_id, int> pcount;
@@ -1649,66 +1644,34 @@ regenerate_heights(app_state & app)
     if(i->second==0)
       roots.push_back(i->first);
 
-  // now iterate
   while (!roots.empty())
     {
       revision_id cur = roots.front();
       roots.pop_front();
-
-      rev_height height;
-
-      for (gi i = inverse_graph.lower_bound(cur);
-           i != inverse_graph.upper_bound(cur); ++i)
-        {
-          bool found(false);
-          u32 childnr(0);
-          rev_height candidate;
-          rev_height parent;
-          app.db.get_rev_height(i->second, parent);
-
-          while(!found)
-            {
-              parent.child_height(candidate, childnr);
-              if (!app.db.has_rev_height(candidate))
-                {
-                  found = true;
-                  if (candidate > height)
-                    height = candidate;
-                }
-              I(childnr < std::numeric_limits<u32>::max());
-              ++childnr;
-            }
-        }
-
-      // FIXME: add ticker here
-
       if (!null_id(cur))
-        app.db.put_rev_height(cur, height);
-
+        revisions.push_back(cur);
+      
       for(gi i = graph.lower_bound(cur);
           i != graph.upper_bound(cur); i++)
         if(--(pcount[i->second]) == 0)
           roots.push_back(i->second);
     }
-
-  guard.commit();
-  P(F("finished determining heights"));
 }
 
 void
-regenerate_rosters(app_state & app)
+regenerate_caches(app_state & app)
 {
-  P(F("regenerating cached rosters"));
+  P(F("regenerating cached rosters and heights"));
+
+  app.db.ensure_open_for_format_changes();
 
   transaction_guard guard(app.db);
 
   app.db.delete_existing_rosters();
+  app.db.delete_existing_heights();
 
-  std::set<revision_id> ids;
-  app.db.get_revision_ids(ids);
-  P(F("calculating rosters to regenerate"));
-  std::vector<revision_id> sorted_ids;
-  toposort(ids, sorted_ids, app);
+  vector<revision_id> sorted_ids;
+  allrevs_toposorted(sorted_ids, app);
 
   ticker done(_("regenerated"), "r", 5);
   done.set_total(sorted_ids.size());
@@ -1717,12 +1680,17 @@ regenerate_rosters(app_state & app)
        i != sorted_ids.end(); ++i)
     {
       revision_t rev;
-      app.db.get_revision(*i, rev);
-      app.db.put_roster_for_revision(*i, rev);
+      revision_id const & rev_id = *i;
+      app.db.get_revision(rev_id, rev);
+      app.db.put_roster_for_revision(rev_id, rev);
+      app.db.put_height_for_revision(rev_id, rev);
       ++done;
     }
 
   guard.commit();
+
+  P(F("finished regenerating cached rosters and heights"));
+
 }
 
 // i/o stuff
